--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
   background-color: black;
 }
 .movSprite {
+  display: inline-block;
   background-size: 100% 100%;
   width: 50px;
   height: 50px;
