--- a/style.css
+++ b/style.css
@@ -7,3 +7,11 @@ body{
   width: 50px;
   height: 50px;
 }
+.colider {
+  height: 50px;
+  width: 150px;
+  background-color: blue;
+  position: absolute;
+  left: 300px;
+  top: 200px;
+}
