--- a/style.css
+++ b/style.css
@@ -15,3 +15,12 @@ body{
   left: 300px;
   top: 200px;
 }
+.boxS {
+  width: 50px;
+  height: 150px;
+  background-color: red;
+  position: absolute;
+  left: 300px;
+  top: 200px;
+  visibility: hidden;
+}
