--- a/style.css
+++ b/style.css
@@ -14,6 +14,5 @@ body{
   box-sizing: border-box;
   width: 25px;
   height: 100%;
-  background-color: silver;
-  border: 1px solid gray;
+  border: 1px solid rgba(255, 255, 255, 0.05);;
 }
