--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ body{
   box-sizing: border-box;
   width: 25px;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /*border: 1px solid rgba(255, 255, 255, 0.05);*/
   background-size: 100% 100%;
+}
+.dot{
+  box-sizing: border-box;
+  border: 3px solid white;
+  border-radius: 100%;
+  width: 20%;
+  height: 20%;
 }
