--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: black;
+  background-color: black;/*rgba(0, 0, 0, 0.7);*/
 }
 .gameBoard {
   display:flex;
@@ -22,7 +22,7 @@ body{
 }
 .dot{
   box-sizing: border-box;
-  border: 3px solid white;
+  border: 3px solid rgba(255, 255, 255, 0.2);;
   border-radius: 100%;
   width: 20%;
   height: 20%;
