--- a/style.css
+++ b/style.css
@@ -3,21 +3,27 @@ body{
 }
 .gameBoard {
   display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%;
 }
 .row {
   display: flex;
   height: 25px;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
-.gameBlock {
+.gridBlock {
   box-sizing: border-box;
   width: 25px;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  /*border: 1px solid rgba(255, 255, 255, 0.05);*/
+  border: 1px solid rgba(255, 255, 255, 0.05);
   background-size: 100% 100%;
 }
 .dot{
