--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid rgba(255, 255, 255, 0.05);
+  /*border: 1px solid rgba(255, 255, 255, 0.05);*/
   background-size: 100% 100%;
 }
 .dot{
