--- a/style.css
+++ b/style.css
@@ -1,34 +1,65 @@
 body{
+  display: flex;
+  height: 700px;
+  justify-content: center;
   background-color: black;/*rgba(0, 0, 0, 0.7);*/
+  font-family: 'Press Start 2P', cursive;
 }
 .gameBoard {
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%;
+}
+.livesDisplay {
+  align-self: flex-start;
+  height: 25px;
+  display: flex;
+}
+.scoreText {
+  width: 200px;
+  height: 100%;
+  align-self: flex-end;
+  display: flex;
+  justify-content: left;
+  color: white;
+  font-size: .95em;
+  align-items: center;
+}
+.lives {
+  height: 100%;
+  width: 25px;
+  background-image: url(assets/pacRight3.png);
+  background-size: 100% 100%;
+}
+.scoreDisplay {
   width: 100%;
-  height: 50%;
+  display: flex;
+  flex-flow: column;
+  flex-wrap: wrap;
+  justify-content: left;
+  height: 25px;
 }
 .row {
+  box-sizing: border-box;
   display: flex;
   height: 25px;
-  width: 100%;
   justify-content: center;
   align-items: center;
 }
 .gridBlock {
   box-sizing: border-box;
   width: 25px;
-  height: 100%;
+  height: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /*border: 1px solid rgba(255, 255, 255, 0.05);*/
   background-size: 100% 100%;
 }
 .dot{
   box-sizing: border-box;
-  border: 3px solid rgba(255, 255, 255, 0.2);;
+  border: 3px solid rgba(255, 255, 255, 0.2);
   border-radius: 100%;
   width: 20%;
   height: 20%;
