--- a/style.css
+++ b/style.css
@@ -5,14 +5,43 @@ body{
   background-color: black;/*rgba(0, 0, 0, 0.7);*/
   font-family: 'Press Start 2P', cursive;
 }
-.conditionAlert {
-  height: 200px;
-  width: 300px;
-  background-color: red;
+.conditionBackground {
+  height: 100%;
+  width: 100%;
   position: fixed;
-  top: 35%;
-  border: 1px solid blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.6);;
+}
+.conditionAlert {
+  width: 300px;
+  background-color: black;
+  border: 3px double blue;
   color: white;
+  display: flex;
+  flex-wrap: wrap;
+}
+.conditionBar {
+  width: 100%;
+  height: 25px;
+  display: flex;
+  border-bottom: 2px solid blue;
+  justify-content: center;
+  align-items: center;
+}
+.conditionBody {
+  height: 100px;
+  width: 100%;
+}
+.resetButton {
+  height: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid blue;
+  color: rgba(255, 255, 255, .7);
 }
 .gameBoard {
   display:flex;
