--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@ body{
   background-color: black;/*rgba(0, 0, 0, 0.7);*/
   font-family: 'Press Start 2P', cursive;
 }
-.conditionBackground {
+.conditionContainer {
   height: 100%;
   width: 100%;
   position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.6);;
+  background-color: rgba(0, 0, 0, 0.6);
+  visibility: hidden;
 }
 .conditionAlert {
   width: 300px;
